--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -50,7 +50,7 @@
                                 <p class="card-text"> {{ ticket.date }} </p>
                                 <p class="card-text"> {{ ticket.email }} </p>
                                 <a href="/editTicket/{{ ticket.id }}" class="btn btn-primary">Edit</a>
-                                <a  href="/deleteTicket/{{ ticket.id }}" class="btn btn-danger">Delete</a>
+                                <a  href="/deleteTicket/{{ ticket.id }}" class="btn btn-danger">Resolve</a>
                             </div>
                         </div>
                     </div>
